planB/.omx/static-audit-20260713/jni-throw-exception-b1e40-red.log
native-reimplementation/recovered_primitives.cpp:23578:10: error: use of undeclared identifier 'recoveredJniThrowExceptionB1e40Regression'
 23578 |     if (!recoveredJniThrowExceptionB1e40Regression()) {
       |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
